[tool.poetry]
name = "screen_bot"
version = "0.1.0"
description = ""
authors = ["Igor Kruglyak <igorkruglyak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
pyppeteer = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
